--- a/client/app/department/post-department.view.html
+++ b/client/app/department/post-department.view.html
@@ -1,6 +1,6 @@
 <form name="form" ng-submit="vm.AddDepartment()" role="form">
     <div class="modal-header">
-        <h3 class="modal-title"></h3>
+        <h3 class="modal-title">Department</h3>
     </div>
     <div class="modal-body">
 
@@ -10,8 +10,10 @@
                 <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Name is required</span>
             </div>
             <div class="form-group" ng-class="{ 'has-error': form.activity.$dirty && form.activity.$error.required }">
-                <label for="activity">Company</label>
-                <input type="text" name="activity" id="activity" class="form-control" ng-model="vm.department.company" required />
+                <label for="company">Company</label>
+                <select id="company" class="form-control" ng-model="vm.department.company">
+                    <option ng-repeat="company in vm.companies" value="{{company._id}}">{{company.name}}</option>
+                </select>
                 <span ng-show="form.activity.$dirty && form.activity.$error.required" class="help-block">Company is required</span>
             </div>
 
