--- a/client/app/header/header.view.html
+++ b/client/app/header/header.view.html
@@ -14,20 +14,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li ng-class="{active: $ctrl.activeModule=== 'home'}" ng-click="$ctrl.select('home')"><a href="#!/home">Demo's home</a></li>
+                <li ng-class="{active: $ctrl.activeModule=== 'people-directory'}" ng-click="$ctrl.select('people-directory')"><a href="#!/people-directory">People directory</a></li>
+                <li ng-class="{active: $ctrl.activeModule=== 'jobs-manager'}" ng-click="$ctrl.select('jobs-manager')"><a href="#!/jobs-manager">Jobs manager</a></li>
+                <li ng-class="{active: $ctrl.activeModule=== 'statistics'}" ng-click="$ctrl.select('statistics')"><a href="#!/statistics">Statistics</a></li>
+
             </ul>
             <div class="col-sm-3 col-md-3">
                 <form class="navbar-form" role="search">
