--- a/client/app/index.html
+++ b/client/app/index.html
@@ -53,6 +53,9 @@
     <script src="company/company.component.js"></script>
     <script src="department/department.component.js"></script>
     <script src="header/header.directive.js"></script>
+    <script src="people-directory/people-directory.controller.js"></script>
     <script src="home/home.controller.js"></script>
+    <script src="jobs-manager/jobs-manager.controller.js"></script>
+    <script src="statistics/statistics.controller.js"></script>
 </body>
 </html>
