--- a/client/app/shared/modal-delete/modal-delete.html
+++ b/client/app/shared/modal-delete/modal-delete.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
-    <h3 class="modal-title">Delete {{ vm.item }}?</h3>
+    <h3 class="modal-title">Delete {{ vm.item.name }}?</h3>
 </div>
 <div class="modal-body">
-    Are you sure you want to delete {{ vm.item }}?
+    Are you sure you want to delete {{ vm.item.name }}?
 </div>
 <div class="modal-footer">
     <button class="btn btn-danger" ng-click="vm.deleteItem()">Delete</button>
